gcc/testsuite/gm2/errors/fail/badenum.mod
MODULE badenum ;

TYPE
   color = (red, blue, green) ;

BEGIN
   red := 1
END badenum.
